@@ -18,6 +18,7 @@
   <a href="install.html#buildingant">Building Ant</a><br>
   <a href="install.html#librarydependencies">Library Dependencies</a><br>
   <a href="platform.html">Platform Specific Issues</a><br>
+  <a href="proxy.html">Proxy configuration</a><br>
 </p>
 <p><br>
 </p>
