@@ -56,6 +56,13 @@ Changes that could break older environments:
   Scripts which previously used timediffmillis to do this compensation may 
   need to be rewritten.  timediffmillis has now been deprecated.
 
+* On Java1.5+, Ant automatically sets the system property
+  java.net.useSystemProxies to true, which gives it automatic use of the local
+  IE (Windows) or Gnome2 (Unix/Linux) proxy settings. This may break any build
+  file that somehow relied on content outside the firewall being unreachable:
+  use the -noproxy command-line option to disable this new feature, or set
+  
+
 
 Fixed bugs:
 -----------
